# QTLSim

./: .gitignore  CMakeLists.txt  QTLSim.sln  QTLSim.vcxproj  QTLSim.vcxproj.filters  README.md  sout.txt
Documents/: Example1.txt
Scrips/: CreateCGenomeSimInputDist.py  PassCGenomeSim.py
src/: DataWindow.c  DataWindow.h  GenLib.c  GenLib.h  PassOptionFile.c  PassOptionFile.h  QTLSim.c  QTLSim.h  RandLib.c  RandLib.h  TestModel.c  TestModel.h
